examples/test_package/steps/benchzebra:precise.pl_run1/#test_analysis_1_result.txt
### Evaluation Report: Zebra Puzzle in ProbLog

---

#### **1. Document Title**
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**
The Zebra Puzzle is a classic logic puzzle where the goal is to determine the correct arrangement of houses and their attributes based on a set of given constraints. This report evaluates the implementation of the puzzle in ProbLog, focusing on logical correctness, predicate definitions, and error handling.

---

#### **3. Test Results Summary**
The provided code fails during execution with the following error:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```

**Failed Queries:**
- The query `zebra(Houses)` fails because the predicate `member/2` is not defined in the ProbLog context.

---

#### **4. Failure Localization**
- **Failed Predicate:** `member/2`
- **Code Line:** The error occurs at the first usage of `member/2` in the code block.
- **Issue:** The predicate `member/2` is not defined in the ProbLog program, leading to an `UnknownClause` error.

---

#### **5. Root Cause Analysis**
- **Classical Prolog Context:**
  - The `member/2` predicate is a standard Prolog predicate, but it is not natively available in ProbLog unless explicitly defined or imported.
  - The code attempts to use `member/2` without providing its definition, causing the failure.
- **ProbLog Context:**
  - ProbLog requires all predicates to be explicitly defined or imported. The absence of `member/2` violates this requirement.
- **DeepProbLog:**
  - No DeepProbLog features (e.g., `nn/3`, `tensor/…`) are used in the code.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The logic of the puzzle is correctly encoded, but the missing `member/2` predicate prevents execution.
  - **Probabilistic Reasoning:** Not applicable, as the puzzle is purely deterministic.
  - **Neural Network Integration:** Not used.
- **Edge Cases:**
  - The code assumes the availability of `member/2`, which is not guaranteed in ProbLog.
  - The recursive predicates (`right_of/3`, `next_to/3`) are correctly defined but unused due to the `member/2` failure.

---

#### **7. Error Summary**

| Number | Problem                          | Impact                          | Suggestion                          |
|--------|----------------------------------|--------------------------------|------------------------------------|
| 1      | Missing `member/2` definition    | Execution fails                | Define `member/2` or use a ProbLog-compatible alternative. |
| 2      | No DeepProbLog features used     | N/A                            | Not applicable.                    |

---

#### **8. Suggested Fix**
To resolve the issue, define the `member/2` predicate in ProbLog or replace it with a compatible alternative. For example:
```prolog
member(X, [X|_]).
member(X, [_|T]) :- member(X, T).
```

Alternatively, use ProbLog's built-in predicates or libraries if available.

---

**Word Count:** ~400 words.  
**Tone:** Formal and analytical.  
**Logic:** Clear and structured.  